[package]
name = "gaia-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-types = { path = "../proto-types" }
proto-messages = { path = "../proto-messages" }
cosmwasm-std = "1.1.5"
ibc-proto = { git = "https://github.com/joneskm/ibc-proto-rs" }
tendermint-proto = { git = "https://github.com/VegeBun-csj/tendermint-rs" }
tendermint-config = {git = "https://github.com/DoraFactory/tendermint-rs", branch = "v0.27.x" }
clap = { version = "4.2.2", features = ["derive"] }
bytes = "1.2.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.82"
database = { path = "../database" }
anyhow = "1.0.70"
gears = { path = "../gears" }
store = { path = "../store" }
strum = "0.24.1"
strum_macros = "0.24"
bank = { path = "../x/bank" }
auth = { path = "../x/auth" }
axum = "0.6.18"
# add p2p
libp2p = { version = "0.40.0", features = ["tcp-tokio"]}
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
once_cell = "1.13.0"
tokio = { version = "1.27.0", features = ["full"] }
ed25519-dalek = "1.0.1"
[dev-dependencies]
