[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.40.0", features = ["tcp-tokio"]}
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
once_cell = "1.13.0"
tokio = { version = "1.27.0", features = ["full"] }
ed25519-dalek = "1.0.1"
anyhow = "1.0.70"
store = {path = "../store"}
database = {path = "../database"}

serde = { version = "1.0", default-features = false }
serde_json = "1.0.82"
tendermint-config = {git = "https://github.com/DoraFactory/tendermint-rs", branch = "v0.27.x" }
trees = {path = "../trees"}