[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.13"
trees = { path = "../trees" }
database = { path = "../database" }
integer-encoding = "3.0.4"
sha2 = "0.10.6"
strum = "0.24.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.82"

[dev-dependencies]
hex = "0.4.3"
